--- a/index.html
+++ b/index.html
@@ -49,7 +49,17 @@
       <!-- to here  -->
 
       <!-- paste what you copied directly below here -->
-
+ <!-- copy from here -->
+      <div class="about">
+        <div class="bio-left">
+          <img src="rosie-the-kraken.png"/>
+        </div>
+        <div class="bio-right">
+          <h2>Doctor Profesor Patricio</h2>
+          <p> Hola, me llamo Ángela y estoy aprendiendo a programar uwu y yo soy alejandro isai y no se donde deje la compu </p>
+        </div>
+      </div>
+      <!-- to here  -->
 
   </main>
 
